add_executable(setlocal_test setlocal_test.cc)
add_executable(tzset_test tzset_test.cc)
add_executable(set_new_handler set_new_handler.cc)
add_executable(malloc_oom_handler malloc_oom_handler.c)
add_executable(time_test time_test.c)
add_executable(hook hook.cc)
add_executable(malloc_test malloc_test.c)
add_executable(get_pid_memory get_pid_memory.c)
add_executable(string_operator string_operator.cc)
add_executable(dowhile dowhile.c)
add_executable(doublePointer doublePointer.c)
add_executable(struct struct.c)
add_executable(ascii ascii.c)
